# Comment-Emojis-Reloaded

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
src/: animated-sprite.cpp  animated-sprite.hpp  emoji-picker.cpp  emoji-picker.hpp  emojis.hpp  label.cpp  label.hpp  main.cpp  scroll-layer.cpp  scroll-layer.hpp  utils.hpp
